@@ -192,6 +192,7 @@ ImpressCMS ChangeLog
 * #60: Date format more configurable. (stranger)
 * #275: Upgrade Script issue from X 2.2.4 - Unable to register new users. (stranger)
 * #482: JS files of plugin manage must not always be loaded. (stranger)
+* #486: Improving cleaning folder's function to be more global. (stranger)
 
 == Impresscms 1.1.2==
 
